# selectedpkgs

./: README.md  pyproject.toml
packaging/debian/: changelog  control  copyright  files  rules
src/selectedpkgs/: __about__.py  main.py
tests/integration/: test_integration.py
